--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,6 +3,7 @@ run:
         - bin
         - static
         - third_party
+        - tests
     skip-dirs-use-default: true
 linters:
     disable-all: true  # 关闭其他linter
