--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --gc --minify --buildFuture
+        run: hugo --gc --minify --buildFuture --source ./docs
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
