--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,5 +1,4 @@
 baseURL = 'http://yusank.github.io/goim/'
-languageCode = 'en-us'
 title = 'GoIM'
 theme = "hugo-book"
 # (Optional) Set this to true if you use capital letters in file names
@@ -11,7 +10,12 @@ enableGitInfo = true
 
 # (Optional) Theme is intended for documentation use, therefore it doesn't render taxonomy.
 # You can remove related files with config below
-disableKinds = ['taxonomy', 'taxonomyTerm']
+
+[languages]
+[languages.en]
+  languageName = '中文'
+  contentDir = 'content'
+  weight = 1
 
 [params]
   # (Optional, default light) Sets color theme: light, dark or auto.
@@ -22,14 +26,6 @@ disableKinds = ['taxonomy', 'taxonomyTerm']
   # Start and end levels can be controlled with markup.tableOfContents setting.
   # You can also specify this parameter per page in front matter.
   BookToC = true
-
-  # (Optional, default none) Set the path to a logo for the book. If the logo is
-  # /static/logo.png then the path would be 'logo.png'
-  BookLogo = ''
-
-  # (Optional, default none) Set leaf bundle to render as side menu
-  # When not specified file structure and weights will be used
-  BookMenuBundle = '/menu'
 
   # (Optional, default docs) Specify section of content to render as menu
   # You can also set value to "*" to render all sections to menu
