--- a/docs/config.toml
+++ b/docs/config.toml
@@ -4,6 +4,14 @@ theme = "hugo-book"
 # (Optional) Set this to true if you use capital letters in file names
 disablePathToLower = true
 
+# Needed for mermaid/katex shortcodes
+[markup]
+[markup.goldmark.renderer]
+  unsafe = true
+
+[markup.tableOfContents]
+  startLevel = 1
+
 # (Optional) Set this to true to enable 'Last Modified by' date and git author
 #  information on 'doc' type pages.
 enableGitInfo = true
@@ -26,6 +34,8 @@ enableGitInfo = true
   # Start and end levels can be controlled with markup.tableOfContents setting.
   # You can also specify this parameter per page in front matter.
   BookToC = true
+
+#   BookMenuBundle = '/menu'
 
   # (Optional, default docs) Specify section of content to render as menu
   # You can also set value to "*" to render all sections to menu
