--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -16,7 +16,7 @@ on:
     branches: [ main ]
   pull_request:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 */4 * * *'
 jobs:
   analyze:
     name: Analyze
