--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,9 +1,9 @@
 name: golangci-lint
 on:
     push:
-        branches: [ main, dev]
+        branches: ["*"]
     pull_request:
-        branches: [ main ]
+        branches: ["*"]
 
 jobs:
     golangci-lint:
