--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,23 +5,65 @@ run:
         - third_party
         - tests
     skip-dirs-use-default: true
+    timeout: 5m
 linters:
-    disable-all: true  # 关闭其他linter
-    enable:            # 下面是开启的linter列表，之后的英文注释介绍了相应linter的功能
-        - deadcode      # Finds unused code
-        - errcheck      # Errcheck is a program for checking for unchecked errors in go programs. These unchecked errors can be critical bugs in some cases
-        - gosimple      # Linter for Go source code that specializes in simplifying a code
-        - govet         # Vet examines Go source code and reports suspicious constructs, such as Printf calls whose arguments do not align with the format string
-        - ineffassign   # Detects when assignments to existing variables are not used
-        - staticcheck   # Staticcheck is a go vet on steroids, applying a ton of static analysis checks
-        - structcheck   # Finds unused struct fields
-        - typecheck     # Like the front-end of a Go compiler, parses and type-checks Go code
-        - unused        # Checks Go code for unused constants, variables, functions and types
-        - varcheck      # Finds unused global variables and constants
-        # - scopelint     # Scopelint checks for unpinned variables in go programs
-        - exportloopref
-        # - golint        # Carry out the stylistic conventions put forth in Effective Go and CodeReviewComments
-        - revive
+  disable:
+    - gochecknoglobals
+    - funlen
+    # 1.22+
+    - wsl
+    - godox
+    - gocognit
+    - nolintlint
+    - testpackage
+    - noctx
+    - nlreturn
+    - gosimple
+    - gomnd
+    - goerr113
+    - exhaustive
+    - nestif
+    - stylecheck
+    - godot
+    - gofumpt
+    - whitespace
+    - unparam
+    - gci
+    - gochecknoinits
+  enable:
+    - asciicheck
+    - bodyclose
+    - deadcode
+    - depguard
+    - dogsled
+    - dupl
+    - errcheck
+    - exportloopref
+    - goconst
+    - gocritic
+    - gocyclo
+    - gofmt
+    - goheader
+    - goimports
+    - golint
+    - gomodguard
+    - goprintffuncname
+    - gosec
+    - govet
+    - ineffassign
+    - interfacer
+    - lll
+    - misspell
+    - prealloc
+    - rowserrcheck
+    - scopelint
+    - sqlclosecheck
+    - staticcheck
+    - structcheck
+    - typecheck
+    - unconvert
+    - unused
+    - varcheck
 
 linters-settings:
     govet:            # 对于linter govet，我们手动开启了它的某些扫描规则
@@ -29,3 +71,5 @@ linters-settings:
         check-unreachable: true
         check-rangeloops: true
         check-copylocks: true
+    lll:
+        line-length: 140
