--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,10 +2,9 @@ name: github pages
 
 on:
   push:
-    branches: [ "**"]
   pull_request:
-    branches: [ main ]
-  
+    branches:
+      - main
 
 jobs:
   deploy:
