fix: user query api #33

--- a/apps/user/configs/config.yaml
+++ b/apps/user/configs/config.yaml
@@ -13,3 +13,8 @@ metadata:
   grpcSrv: yes
 redis:
   addr: 127.0.0.1:6379
+mysql:
+  addr: 127.0.0.1:3306
+  user: root
+  password: goim123456
+  db: goim
