--- a/component/elk/filebeat.yml
+++ b/component/elk/filebeat.yml
@@ -7,13 +7,17 @@ filebeat.inputs:
     json.message_key: msg
     json.keys_under_root: true
     json.overwrite_keys: true
-    scan_frequency: 5s
     # inactive
+    scan_frequency: 1s
     close_inactive: 2h
+    backoff: 0.1s
+    max_backoff: 1s
+    backoff_factor: 1
+    tail_files: true
 
 filebeat.config.modules:
   path: ${path.config}/modules.d/*.yml
-  reload.enabled: false
+  reload.enabled: true
 
 setup.template.settings:
   index.number_of_shards: 1
