--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,8 +12,10 @@
 name: "CodeQL"
 
 on:
-  push:
-  pull_request:
+  pull_request: { }
+    push:
+      branches:
+        - main
   schedule:
     - cron: '0 9,18 * * *'
 jobs:
